--- a/src/sass/_varAndGlobal.scss
+++ b/src/sass/_varAndGlobal.scss
@@ -26,6 +26,9 @@ $cyan: #08B2E3;
         height: 300%;
     }
 }
+textarea {
+    resize: none;
+}
 
 .link{
     cursor: pointer;
@@ -96,3 +99,62 @@ $cyan: #08B2E3;
     }
 }
 
+.joinFile{
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+    z-index: -1;
+    
+    + label {
+        transition: ease-in-out 200ms;
+        border-radius: 10px;
+        height: 30px;
+        width: 30px;
+        text-align: center;
+        font-size: 1.3em;
+        font-weight: 700;
+        color: $white;
+        background-color: $taupGrey;
+        box-shadow: 0 1px 2px $raisinBlack;
+        display: inline-block;
+
+        .clip{
+            height: 100%;
+            width: 60%;
+        }
+    }
+
+    + label:hover {
+    cursor: pointer;
+    box-shadow: inset 0 0 3px $raisinBlack;
+    }
+}
+
+.submitButton{
+    background-color: $cyan;
+    color: $white;
+    font-size: 1.1em;
+    border-radius: 5px;
+}
+
+.fromMessager{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+    .zoneMsg{
+        width: 100%;
+        overflow: scroll;
+        padding: 20px;
+        font-size: 1.1em;
+    }
+
+    .bottomBar{
+        display: flex;
+        background-color: $taupGrey;
+        justify-content: center;
+        padding: 10px;
+    }
+}
